main/default/objects/Test_Execution__c/fields/Actual_Results__c.field-meta.xml
<CustomField>
    <fullName>Actual_Results__c</fullName>
    <description>Test Execution Actual Results</description>
    <label>Actual Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>