main/default/objects/Test_Execution__c/fields/Dev_Task__c.field-meta.xml
<CustomField>
    <fullName>Dev_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Test Executions (Dev Task)</relationshipLabel>
    <relationshipName>Test_Executions2</relationshipName>
    <type>Lookup</type>
</CustomField>