main/default/objects/Test_Execution__c/fields/From_Test_Execution_Button__c.field-meta.xml
<CustomField>
    <fullName>From_Test_Execution_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Test Execution Button</label>
    <type>Checkbox</type>
</CustomField>