main/default/objects/Test_Execution__c/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functionality</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Test Executions (Functionality)</relationshipLabel>
    <relationshipName>Test_Executions1</relationshipName>
    <type>Lookup</type>
</CustomField>