main/default/objects/Test_Execution__c/fields/IsClone__c.field-meta.xml
<CustomField>
    <fullName>IsClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Clone</label>
    <type>Checkbox</type>
</CustomField>