main/default/objects/Test_Execution__c/fields/QA_Task__c.field-meta.xml
<CustomField>
    <fullName>QA_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Test Executions (QA Task)</relationshipLabel>
    <relationshipName>Test_Executions3</relationshipName>
    <type>Lookup</type>
</CustomField>