main/default/objects/Test_Execution__c/fields/Template_Task__c.field-meta.xml
<CustomField>
    <fullName>Template_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Task</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria for Template Task.</errorMessage>
        <filterItems>
            <field>Project_Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Test Executions (Template Task)</relationshipLabel>
    <relationshipName>Template_Project_Task_Child</relationshipName>
    <type>Lookup</type>
</CustomField>