main/default/objects/Test_Execution__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <label>Test Step</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>