main/default/objects/Test_Execution__c/fields/Testing_Phase__c.field-meta.xml
<CustomField>
    <fullName>Testing_Phase__c</fullName>
    <description>Identifies the phase in the testing process</description>
    <label>Testing Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Integration Testing</fullName>
                <label>SIT</label>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
                <label>UAT</label>
            </value>
            <value>
                <fullName>Prod Smoke Testing</fullName>
                <label>SMOKE</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>