main/default/objects/Test_Execution__c/listViews/QA_Test_Execution.listView-meta.xml
<ListView>
    <fullName>QA_Test_Execution</fullName>
    <columns>QA_Task__c</columns>
    <columns>NAME</columns>
    <columns>Testing_Phase__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Expected_Results__c</columns>
    <columns>Actual_Results__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>QA Test Execution</label>
</ListView>